--- a/firebase.json
+++ b/firebase.json
@@ -4,9 +4,32 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
+    "source": "/",
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm run lint:functions",
+      "npm run build:functions"
+    ],
+    "ignore": [
+      ".cache",
+      ".firebase",
+      ".git",
+      ".firebaserc",
+      "**/.gitignore",
+      "**/.eslintrc.js",
+      "app",
+      "firebase.json",
+      "firestore.indexes.json",
+      "firestore.rules",
+      "**/firebase-debug.log",
+      "functions/src/*",
+      "functions/tsconfig.dev.json",
+      "functions/tsconfig.json",
+      "**/node_modules/**",
+      "public",
+      "README.md",
+      "remix.config.js",
+      "remix.env.d.ts",
+      "tsconfig.json"
     ]
   },
   "hosting": {
@@ -15,6 +38,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "remix"
+      }
     ]
   },
   "emulators": {
