--- a/package.json
+++ b/package.json
@@ -7,29 +7,41 @@
     "build": "remix build",
     "dev": "remix watch",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "start:dev": "cross-env NODE_ENV=development node server/index.js"
+    "dev:functions": "(cd functions && tsc --watch)",
+    "start": "cross-env NODE_ENV=development firebase serve --only hosting,functions",
+    "start:all": "cross-env NODE_ENV=development firebase serve",
+    "lint:functions": "(cd functions && eslint --ext .js,.ts .)",
+    "build:functions": "(cd functions && tsc)"
   },
   "dependencies": {
+    "@remix-run/dev": "^0.20.1",
+    "@remix-run/express": "^0.20.1",
     "@remix-run/react": "^0.20.1",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "firebase-admin": "^10.0.0",
+    "firebase-functions": "^3.16.0",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6.0.0-beta.8",
-    "remix": "^0.20.1",
-    "@remix-run/express": "^0.20.1",
-    "compression": "^1.7.4",
-    "cross-env": "^7.0.3",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "remix": "^0.20.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^0.20.1",
+    "@types/express": "^4.17.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.2",
+    "firebase-functions-test": "^0.3.3",
     "typescript": "^4.1.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": "16"
   },
+  "main": "functions/lib/index.js",
   "sideEffects": false
 }
